# TruthAnalysis

./: .gitignore  README.rst  compile.sh  setup.sh
TruthLevelAnalysis/: CMakeLists.txt
TruthLevelAnalysis/Root/: CombinedSelection.cxx  CommonTruthSelectionModule.cxx  LinkDef.h  TruthOutputModule.cxx
TruthLevelAnalysis/TruthLevelAnalysis/: CombinedSelection.h  CommonTruthSelectionModule.h  TruthOutputModule.h
TruthLevelAnalysis/cmt/: Makefile.RootCore
TruthLevelAnalysis/plotting/: compare_KLs.cxx  draw_plots.cxx  draw_stack.cxx
TruthLevelAnalysis/plotting/5000Events/: Draw_ratio  draw.cxx  draw_plots.cxx
TruthLevelAnalysis/plotting/back/plotting/: draw_plots.cxx
TruthLevelAnalysis/run/: latest  makelink.sh  module_config.yaml  regions_bbZZ4l.yaml  regions_container.yaml  run.py  run.sh  test.sh  truth_modules.py
TruthLevelAnalysis/run/dihiggs-inputs/: copy.sh
TruthLevelAnalysis/run/herwig7/output_2l0tau_20210226_17-29-16/: location
TruthLevelAnalysis/run/herwig7/output_2l1tau_20210226_17-30-26/: location
TruthLevelAnalysis/run/herwig7/output_3l0tau_20210226_17-31-33/: location
TruthLevelAnalysis/run/herwig7/output_3l1tau_20210226_17-32-03/: location
TruthLevelAnalysis/run/herwig7/output_4l0tau_20210226_17-33-04/: location
TruthLevelAnalysis/run/herwig7/output_4l1tau_20210226_17-33-17/: location
TruthLevelAnalysis/run/herwig7/output_yy0l_20210226_17-33-45/: location
TruthLevelAnalysis/run/herwig7/output_yy1l_20210226_17-34-55/: location
TruthLevelAnalysis/run/herwig7/output_yy2l_20210226_17-36-03/: location
TruthLevelAnalysis/run/pythia8/: test.sh
TruthLevelAnalysis/run/pythia8/output_2l0tau_20210226_17-16-54/: location
TruthLevelAnalysis/run/pythia8/output_2l1tau_20210226_17-18-34/: location
TruthLevelAnalysis/run/pythia8/output_3l0tau_20210226_17-20-13/: location
TruthLevelAnalysis/run/pythia8/output_3l1tau_20210226_17-20-54/: location
TruthLevelAnalysis/run/pythia8/output_4l0tau_20210226_17-22-29/: location
TruthLevelAnalysis/run/pythia8/output_4l1tau_20210226_17-22-45/: location
TruthLevelAnalysis/run/pythia8/output_yy0l_20210226_17-23-30/: location
TruthLevelAnalysis/run/pythia8/output_yy1l_20210226_17-25-13/: location
TruthLevelAnalysis/run/pythia8/output_yy2l_20210226_17-26-47/: location
